--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,18 @@
 @font-face {
+  font-family: Mona Sans Wide;
+  src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWide.otf);
+}
+@font-face {
+  font-family: Mona Sans Italic;
+  src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWideItalic.otf);
+}
+@font-face {
   font-family: Mona Sans;
-  src: url(Assets\Fonts\MonaSans);
+  src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWide.otf);
+}
+@font-face {
+  font-family: Mona Sans regular;
+  src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-Regular.otf);
 }
 *,
 *::after,
@@ -26,14 +38,14 @@ header {
   flex-direction: row;
 }
 #header_logo {
-  height: 7vh;
+  height: 6vh;
   width: auto;
-  margin: auto 0 auto 4vw;
+  margin: 3vh 0 auto 4vw;
 }
 .navbar {
-  width: 32vw;
-  height: 8vh;
-  margin: 1vh auto;
+  width: 33.5vw;
+  height: 9vh;
+  margin: 1.5vh auto;
   border: 1px solid #D9D9D9;
   border-radius: 35px;
   background: linear-gradient(0deg, #1E1E1E, #313131);
@@ -43,11 +55,11 @@ header {
   border-radius: 30px;
 }
 .nav_link {
-  height: 6vh;
+  height: 7vh;
   width: 7vw;
   margin: auto;
-  font-size: 0.8rem;
-  line-height: 6vh;
+  font-size: 0.95rem;
+  line-height: 7vh;
   text-align: center;
 }
 .nav_link:focus {
@@ -55,36 +67,94 @@ header {
   color: #0D0D0D;
 }
 .right_nav {
-  width: 18vw;
-  height: 7vh;
-  margin: auto 0;
+  width: 15vw;
+  height: 9vh;
+  margin: auto 3vw auto 0;
   display: flex;
   flex-direction: row;
 }
 #lets_talk {
-  height: 8vh;
+  height: inherit;
   width: 9vw;
   margin: 0 2vw 0 0;
   border: 1px solid #EEE5E5;
-  font-size: 0.8rem;
-  line-height: 8vh;
+  font-size: 0.95rem;
+  line-height: 9vh;
   text-align: center;
+  border-radius: 40px;
 }
 #lets_talk:hover {
   box-shadow: 1px 1px 10px #d9d9d936;
 }
 .dropdown_menu {
-  height: 8vh;
-  width: 8vh;
+  height: 9vh;
+  width: 9vh;
   border: 1px solid #D9D9D9;
-  line-height: 8vh;
-  text-align: center;
-  transform: rotate(90deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 33px;
+  background: linear-gradient(0deg, #1E1E1E, #313131);
 }
-.dropdown_menu:hover {
+.dropdown_lines {
+  width: 1.9vh;
+  height: 4vh;
+  border-left: 3px solid white;
+  border-right: 3px solid white;
+  transform: rotate(-90deg);
+}
+.dropdown_menu:hover .dropdown_lines {
   transform: none;
   -webkit-transition: transform 0.5s ease-in-out;
 }
 h1 {
-  font-family: Mons Sans;
+  font-family: Mona Sans Wide;
+  font-style: wide;
+  font-weight: 400;
+  font-size: 6.25rem;
+  line-height: 9rem;
+}
+.main_title1 {
+  margin: 9.5vh 0 0 4.45vw;
+}
+.oval_icons {
+  display: inline;
+}
+.oval_icon1 {
+  margin: 0 2vw -1vh 5.5vw;
+}
+.main_title2 {
+  font-family: Mona Sans Italic;
+  display: inline;
+  margin: 0 2vw 0 0;
+  background: -webkit-linear-gradient(#1085fe, #1085fe, #a4ccf557);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.main_title3 {
+  margin: 0 0 0 4.45vw;
+}
+#section1_img {
+  display: block;
+  margin: 7vh auto;
+}
+.circle_graphic {
+  position: absolute;
+  margin: -1vh 0 0 88.5vw;
+}
+.title2 {
+  margin: 15vh 0 0 4.45vw;
+  letter-spacing: 1px;
+  font-size: 4rem;
+}
+.title2_about {
+  font-family: Mona Sans Italic;
+  font-weight: 100;
+}
+.title2_kodelab {
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.section2_p {
+  font-size: 1.5rem;
 }
