--- a/Less/style.less
+++ b/Less/style.less
@@ -2,6 +2,7 @@
 @c-w: #FFFFFF;
 @c-w2: #EEE5E5;
 @bord: #D9D9D9;
+@text: @text;
 @shadow:#d9d9d936;
 @font-face {font-family: Mona Sans Wide; src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWide.otf);}
 @font-face {font-family: Mona Sans Italic;src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWideItalic.otf);}
@@ -13,7 +14,7 @@
     margin: 0;
     padding: 0;
     box-sizing:border-box;
-  // outline: 1px solid green;
+  //outline: 1px solid green;
     text-decoration: none;
     color: @c-w2;
     font-family: Mona Sans;
@@ -29,6 +30,9 @@ body {
   width: 100vw;
 }
 
+section {
+  padding: 4.45vw;
+}
 header {
   margin: 5vh auto;
   display: flex;
@@ -121,7 +125,7 @@ h1 {
   font-family:Mona Sans Wide;
   font-style: wide;
   font-weight: 400;
-  font-size: 6.25rem;
+  font-size: 6.2rem;
   line-height: 9rem;
 }
   
@@ -174,7 +178,7 @@ h1 {
 }
 
 .title2_about {
-  font-family: Mona Sans Narrow Italic;
+  font-family: Mona Sans Italic;
   font-weight: 100;
   margin: 4vh 0;
 }
@@ -185,6 +189,76 @@ h1 {
 }
 
 .section2_p {
-  font-size: 1.5rem;
+  width: 100vw;
+  padding:0 4.45vw;
+  font-size: 2.9rem;
+  margin: 5vh 0 0 0;
+  line-height: 10vh;
+  word-spacing: 1.5px;
+  letter-spacing: 1;
+  font-family: Mona Sans;
+}
+
+.horizontal_divider {
+  width: 90vw;
+  margin: 10vh auto;
+  height: 1.5px;
+  background-color: #D9D9D9;
+}
+
+.features {
+  width: 100vw;
+  height: 100vh;
+  padding: 0 4.35vw;
+  display: flex;
+  flex-direction: row;
+}
+
+.feature1,.feature2, .feature3 {
+  width: 29vw;
+  padding: 0 3vw 0 0;
+}
+.feature2, .feature3 {
+  width: 32vw;
+  padding: 0 3vw 0 3vw;
+}
+
+.features h2 {
+  font-size: 6.3rem;
+  background: -webkit-linear-gradient(white, #313131);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.features h4 {
+  font-size: 1.9rem;
+  font-weight: 400;
+  margin: 4vh 0 7vh 0;
+}
+
+.features_p {
+  font-size: 1.3rem;
+  font-family:Mona Sans regular;
+  color: @text;
+  padding: px;
+  line-height: 2.4rem;
+}
+
+.vertical_divider {
+  height: 100%;
+  width: 1px;
+  background-color: @text;
+  margin: 0 1vw 0 0;
+}
+
+.wierd_cube {
+  margin: 8vh 0;
+}
+
+
+//Section Three - Our Services
+
+.section3 {
+  padding: 0 4.45vw;
 }
 
