--- a/Css/style.css
+++ b/Css/style.css
@@ -31,6 +31,7 @@
 body {
   background: #0D0D0D;
   overflow: auto;
+  overflow-x: hidden;
 }
 .container {
   height: 100vh;
@@ -80,7 +81,7 @@ header {
   display: flex;
   flex-direction: row;
 }
-#lets_talk {
+.lets_talk {
   height: inherit;
   width: 9vw;
   margin: 0 2vw 0 0;
@@ -120,16 +121,17 @@ h1 {
   font-style: wide;
   font-weight: 400;
   font-size: 6.5vw;
-  line-height: 9rem;
+  line-height: 15vh;
 }
 .oval_icons {
   display: inline;
-  height: 14vh;
 }
 .oval_icon1 {
+  width: 24vw;
   margin: 0 1.5vw -2.5vh 1vw;
 }
 .oval_icon2 {
+  width: 13vw;
   margin: 0 0 -2.5vh 1.5vw;
 }
 .main_title2 {
@@ -311,4 +313,70 @@ h1 {
 }
 #section4_lefttext {
   margin: 10vh 0 0 0;
+}
+#tape {
+  width: 100vw;
+  height: 13vw;
+  background-color: #EEE5E5;
+  text-align: center;
+}
+#tape span {
+  display: block;
+  color: black;
+  font-size: 6.78vw;
+  line-height: 13vw;
+  font-style: italic;
+}
+#tape img {
+  height: 6.7vw;
+}
+.section5 {
+  margin: 14vh auto;
+  display: grid;
+}
+#section5_example {
+  display: flex;
+  flex-direction: row;
+}
+#section5_mockup {
+  width: 57.7vw;
+  margin: 0 1vw 0 0;
+}
+#section5_mockup-description {
+  height: 100%;
+  width: 31vw;
+  margin: auto;
+  padding: 7vh 3vw;
+  background-color: #161719;
+}
+#section5_mockup-description h3 {
+  font-size: 2.65vw;
+  font-weight: 100;
+  margin: 0 0 5vh 0;
+}
+#section5_mockup-description p {
+  font-size: 1.1vw;
+  font-weight: 100;
+  line-height: 4vh;
+  letter-spacing: 1px;
+  color: #c2c2c2;
+}
+.button_style {
+  height: 6.1vh;
+  width: 7vw;
+  display: inline-block;
+  margin: 2.5vh 0.5vw 2.5vh 0;
+  border: 1px solid #EEE5E5;
+  font-size: 1.1vw;
+  line-height: 6.1vh;
+  text-align: center;
+  border-radius: 40px;
+}
+#section5_largebutton {
+  width: 14.3vw;
+  height: 8.4vh;
+  display: block;
+  margin: 3vh 0;
+  line-height: 8.4vh;
+  border: 2px solid #EEE5E5;
 }
