--- a/Less/style.less
+++ b/Less/style.less
@@ -1,3 +1,5 @@
+//Variables
+
 @background:#0D0D0D;
 @c-w: #F5F5F5;
 @c-w2: #EEE5E5;
@@ -5,6 +7,7 @@
 @text: #c2c2c2;
 @shadow:#d9d9d936;
 @service_bg: #161719;
+@test: 1px solid blue;
 @font-face {font-family: Mona Sans Wide; src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWide.otf);}
 @font-face {font-family: Mona Sans Italic;src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWideItalic.otf);}
 @font-face {font-family: Mona Sans; src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWide.otf);}
@@ -13,12 +16,15 @@
 
 
 // 5vw       
-// 4.3rem   
+// 4.3rem  
+
+//General Rule Sets
+//--------------------------------------------------------------------------------------
+
 *, *::after, *::before {
     margin: 0;
     padding: 0;
     box-sizing:border-box;
-  //outline: 1px solid green;
     text-decoration: none;
     color: @c-w2;
     font-family: Mona Sans;
@@ -46,7 +52,17 @@ header {
   flex-direction: row;
 }
 
-//header
+//Extra space at bottom of page- Feel free to delete
+
+.extra_space {
+  position: absolute;
+  margin: 450vh 0 0 0;
+  height: 50vh;
+  width: 100vw;
+}
+
+//Nav Bar
+//---------------------------------------------------------------------------------------
 
 #header_logo {
   height: 6vh;
@@ -128,6 +144,7 @@ header {
 
 
 //Title
+//---------------------------------------------------------------------------------
 
 h1 {
   font-family:Mona Sans Wide;
@@ -162,6 +179,7 @@ h1 {
 
 
 //First Section
+//---------------------------------------------------------------------------------------
 
 #section1_img {
   display: block;
@@ -177,6 +195,7 @@ h1 {
 
 
 //Second Section --About
+//-----------------------------------------------------------------------------------------
 
 
 .title2 {
@@ -270,6 +289,7 @@ h1 {
 
 
 //Section Three - Our Services
+//--------------------------------------------------------------------------------
 
 .section3 {
   width: 100vw;
@@ -336,6 +356,7 @@ h1 {
 
 
 //section4
+//-------------------------------------------------------------------------------------
 
 .section4 {
   height: 85vh;
@@ -371,6 +392,7 @@ h1 {
 }
 
 //Tape - Selected Projects
+//------------------------------------------------------------------------------
 
 #tape {
   width: 100vw;
@@ -388,7 +410,10 @@ h1 {
 #tape img {
   height: 6.7vw;
 }
-//Section5 portfolio 
+
+
+//Section5 --portfolio 
+//---------------------------------------------------------------------------------
 
 .section5 {
   margin: 14vh auto 5vh auto;
@@ -445,7 +470,10 @@ margin: 0 1vw 0 0;
   border: 2px solid @c-w2;
 }
 
+
+
 //website gallery
+//--------------------------------------------------------------------------------------
 
 #portfolio {
   width: 100vw;
@@ -497,6 +525,7 @@ margin: 0 1vw 0 0;
 
 
 //View More Circle
+//----------------------------------------------------------------------------
 
 #view_more {
   height: 16vw;
@@ -515,7 +544,12 @@ margin: 0 1vw 0 0;
   color: @service_bg;
   transition:background-color 1s ease;
 }
+
+
+
 //section6
+//-----------------------------------------------------------------------
+
 
 .section6 {
   display: flex;
@@ -545,12 +579,22 @@ margin: 0 1vw 0 0;
 }
 
 
-//Section 7 -white
+//Section 7 --globe vector etc... 
+//--------------------------------------------------------------------------------
+
+
+
 .section7 {
+  border: @test;
+}
+.container_white_s7 {
+  width: 100vw;
   height: 200vh;
+  margin: -4.2vw 0 0 -4.2vw;
+  padding: 4.2vw;
+  position: absolute;
   background-color: @c-w;
 }
-
 .section7 h2 {
   width: 55vw;
   padding: 2vh 0 0 0;
@@ -578,8 +622,8 @@ margin: 0 1vw 0 0;
 
 #section7_headingsmall {
   color: @c-w;
+  margin: -135vh 0 0 0;
   position: absolute;
-  margin: -125vh 0 0 0;
   font-size: 1.8vw;
   font-weight: 200;
 }
@@ -587,26 +631,22 @@ margin: 0 1vw 0 0;
 #section7_heading2 {
   width: 55vw;
   color: @c-w;
-  position: absolute;
-  margin: -132vh 0 0 36vw;
+  margin: -140vh 0 0 36vw;
 }
 #section7_p2 {
   width: 53vw;
-  position: absolute;
-  margin: -89vh 0 0 36vw;
+  margin: 0 0 0 36vw;
   color: @text;
 }
 #horizontal_divider_s7 {
   width: 55vw;
-  position: absolute;
-  margin: -70vh 0 0 36vw;
+  margin:4vh 0 0 36vw;
 }
 
 #box_of_stats_s7 {
   width: 60vw;
   height: 38vw;
-  margin:-67vh 0 0 36vw ;
-  position: absolute;
+  margin:5vh 0 0 36vw ;
   display: grid;
   grid-template-columns: repeat(2, 30vw);
 }
@@ -628,5 +668,12 @@ margin: 0 1vw 0 0;
 
 #section7_img2 {
   width: 27vw;
-  margin: -50vh 0 0 0;
+  position: absolute;
+  margin: 34vh 0 0 0;
 }
+
+
+
+
+
+
