--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,4 @@
+/*Variables */
 @font-face {
   font-family: Mona Sans Wide;
   src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumWide.otf);
@@ -18,6 +19,9 @@
   font-family: Mona Sans Narrow Italic;
   src: url(/Assets/Fonts/MonaSans/OTF/Mona-Sans-MediumNarrowItalic.otf);
 }
+/* ratio  5vw -- 4.3rem  */
+/*General Rule Sets
+--------------------------------------------------------------------------------------*/
 *,
 *::after,
 *::before {
@@ -29,10 +33,9 @@
   font-family: Mona Sans;
 }
 body {
-  background: #0D0D0D;
-  overflow: auto;
-  overflow-x: hidden;
   width: 100vw;
+  background: #0D0D0D;
+  overflow-x: hidden;
 }
 .container {
   height: 100vh;
@@ -47,12 +50,22 @@ header {
   display: flex;
   flex-direction: row;
 }
+h1 {
+  font-family: Mona Sans Wide;
+  font-style: wide;
+  font-weight: 400;
+  font-size: 6.5vw;
+  line-height: 15vh;
+}
+/*Extra space at bottom of page- Feel free to delete*/
 .extra_space {
-  position: absolute;
-  margin: 450vh 0 0 0;
   height: 50vh;
   width: 100vw;
+  position: absolute;
+  margin: 450vh 0 0 0;
 }
+/*Nav Bar
+---------------------------------------------------------------------------------------*/
 #header_logo {
   height: 6vh;
   width: auto;
@@ -62,9 +75,9 @@ header {
   width: 33.5vw;
   height: 9vh;
   margin: 1.5vh auto;
+  background: linear-gradient(0deg, #1E1E1E, #313131);
   border: 1px solid #D9D9D9;
   border-radius: 35px;
-  background: linear-gradient(0deg, #1E1E1E, #313131);
   display: flex;
 }
 .navbar_item {
@@ -94,12 +107,12 @@ header {
   width: 9vw;
   margin: 0 2vw 0 0;
   border: 1px solid #EEE5E5;
+  border-radius: 40px;
   font-size: 1.1vw;
   line-height: 9vh;
   text-align: center;
-  border-radius: 40px;
 }
-#lets_talk:hover {
+.lets_talk:hover {
   box-shadow: 1px 1px 10px #d9d9d936;
 }
 .dropdown_menu {
@@ -117,20 +130,15 @@ header {
   height: 4vh;
   border-left: 3px solid white;
   border-right: 3px solid white;
-  transform: rotate(-90deg);
+  transform: rotate(90deg);
 }
 .dropdown_menu:hover .dropdown_lines {
   transform: none;
   -webkit-transition: transform 0.5s ease-in-out;
   transition: transform 0.5s ease-in-out;
 }
-h1 {
-  font-family: Mona Sans Wide;
-  font-style: wide;
-  font-weight: 400;
-  font-size: 6.5vw;
-  line-height: 15vh;
-}
+/*Title
+---------------------------------------------------------------------------------*/
 .oval_icons {
   display: inline;
 }
@@ -150,24 +158,28 @@ h1 {
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+/*First Section
+---------------------------------------------------------------------------------------*/
 #section1_img {
+  width: 90vw;
   display: block;
   margin: 7vh auto 4vh auto;
-  width: 90vw;
 }
 .circle_graphic {
   position: absolute;
   margin: -1vh 0 0 84.5vw;
 }
+/*Second Section --About
+-----------------------------------------------------------------------------------------*/
 .title2 {
   margin: 7vh 0 0 0.4vw;
   letter-spacing: 1px;
   font-size: 4.65vw;
 }
 .title2_about {
+  margin: 4vh 0;
   font-family: Mona Sans Italic;
   font-weight: 100;
-  margin: 4vh 0;
 }
 .title2_kodelab {
   font-weight: 600;
@@ -176,17 +188,17 @@ h1 {
 .section2_p {
   width: 100vw;
   padding: 0 0.5vw;
-  font-size: 3vw;
   margin: 6.5vh 0 0 0;
+  font-family: Mona Sans;
+  font-size: 3vw;
   line-height: 10vh;
   word-spacing: 1.5px;
   letter-spacing: 1;
-  font-family: Mona Sans;
 }
 .horizontal_divider {
   width: 90vw;
-  margin: 10vh auto;
   height: 1.5px;
+  margin: 10vh auto;
   background-color: #D9D9D9;
   position: relative;
 }
@@ -219,15 +231,14 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 .features h4 {
+  margin: 4vh 0 7vh 0;
   font-size: 2vw;
   font-weight: 400;
-  margin: 4vh 0 7vh 0;
 }
 .features_p {
+  color: #c2c2c2;
   font-size: 1.5vw;
   font-family: Mona Sans regular;
-  color: #c2c2c2;
-  padding: px;
   line-height: 2.4rem;
 }
 .vertical_divider {
@@ -239,6 +250,8 @@ h1 {
 .wierd_cube {
   margin: 8vh 0;
 }
+/*Section Three - Our Services
+--------------------------------------------------------------------------------*/
 .section3 {
   width: 100vw;
   padding: 0 4.45vw;
@@ -264,10 +277,10 @@ h1 {
   flex-direction: row;
 }
 .service h3 {
+  margin: 12vh 0 5vh 5vw;
   position: absolute;
   font-size: 4.6vw;
   font-weight: 100;
-  margin: 12vh 0 5vh 5vw;
 }
 .service img {
   width: 92vw;
@@ -285,26 +298,28 @@ h1 {
   margin: 60vh 0 0 50%;
 }
 .service_p {
-  position: absolute;
   width: 39vw;
+  margin: 25vh 0 0 5vw;
+  position: absolute;
+  color: #c2c2c2;
+  font-size: 1.4vw;
   letter-spacing: 1.3px;
   word-spacing: 1px;
   line-height: 2rem;
-  font-size: 1.4vw;
-  margin: 25vh 0 0 5vw;
-  color: #c2c2c2;
 }
+/*section4
+/-------------------------------------------------------------------------------------*/
 .section4 {
   height: 85vh;
   display: grid;
   grid-template-columns: 45% 55%;
 }
 .section4 h2 {
+  margin: auto;
   font-size: 5vw;
   line-height: 13vh;
   font-weight: 200;
   letter-spacing: 1px;
-  margin: auto;
 }
 .section4 h3 {
   font-size: 2vw;
@@ -314,14 +329,16 @@ h1 {
   width: 68%;
   margin: 5vh 0;
   font-size: 1.3vw;
+  color: #c2c2c2;
   font-weight: 100;
   line-height: 4.2vh;
   letter-spacing: 1px;
-  color: #c2c2c2;
 }
 #section4_lefttext {
   margin: 10vh 0 0 0;
 }
+/*Tape - Selected Projects
+------------------------------------------------------------------------------*/
 #tape {
   width: 100vw;
   height: 13vw;
@@ -338,6 +355,8 @@ h1 {
 #tape img {
   height: 6.7vw;
 }
+/*Section5 --portfolio 
+---------------------------------------------------------------------------------*/
 .section5 {
   margin: 14vh auto 5vh auto;
   display: grid;
@@ -348,6 +367,7 @@ h1 {
 }
 #section5_mockup {
   width: 57.7vw;
+  height: auto;
   margin: 0 1vw 0 0;
 }
 #section5_mockup-description {
@@ -363,31 +383,33 @@ h1 {
   margin: 0 0 5vh 0;
 }
 #section5_mockup-description p {
+  color: #c2c2c2;
   font-size: 1.1vw;
   font-weight: 100;
   line-height: 4vh;
   letter-spacing: 1px;
-  color: #c2c2c2;
 }
 .button_style {
   height: 6.1vh;
   width: 7vw;
-  display: inline-block;
   margin: 2.5vh 0.5vw 2.5vh 0;
+  display: inline-block;
   border: 1px solid #EEE5E5;
+  border-radius: 40px;
   font-size: 1.1vw;
   line-height: 6.1vh;
   text-align: center;
-  border-radius: 40px;
 }
 #section5_largebutton {
   width: 14.3vw;
   height: 8.4vh;
-  display: block;
   margin: 3vh 0;
-  line-height: 8.4vh;
   border: 2px solid #EEE5E5;
+  display: block;
+  line-height: 8.4vh;
 }
+/*website gallery
+--------------------------------------------------------------------------------------*/
 #portfolio {
   width: 100vw;
   margin: -7vh auto 10vh auto;
@@ -405,10 +427,10 @@ h1 {
   margin-top: 8vh;
 }
 .portfolio_item h3 {
-  font-size: 2vw;
-  font-weight: 100;
   margin: 3.75vh 0 5vh 0;
   display: inline;
+  font-size: 2vw;
+  font-weight: 100;
 }
 .portfolio_item a {
   height: 8.5vh;
@@ -417,9 +439,9 @@ h1 {
   margin: 2.5vh 0 2.5vh 9vw;
   border: 2px solid #EEE5E5;
   border-radius: 40px;
+  text-align: center;
   font-size: 1.2vw;
   line-height: 8.5vh;
-  text-align: center;
 }
 .portfolio_item img {
   height: auto;
@@ -429,6 +451,8 @@ h1 {
   color: #0D0D0D;
   transition: background-color 0.5s ease;
 }
+/*View More Circle
+----------------------------------------------------------------------------*/
 #view_more {
   height: 16vw;
   width: 16vw;
@@ -445,6 +469,8 @@ h1 {
   color: #161719;
   transition: background-color 1s ease;
 }
+/*section6
+-----------------------------------------------------------------------*/
 .section6 {
   display: flex;
   flex-direction: row;
@@ -468,6 +494,8 @@ h1 {
   letter-spacing: 1px;
   line-height: 5vh;
 }
+/*Section 7 --globe vector etc... 
+--------------------------------------------------------------------------------*/
 .section7 {
   border: 1px solid blue;
 }
@@ -482,9 +510,9 @@ h1 {
 .section7 h2 {
   width: 55vw;
   padding: 2vh 0 0 0;
+  color: #0D0D0D;
   font-size: 5.25vw;
   font-weight: 100;
-  color: #0D0D0D;
 }
 .section7 p {
   width: 53vw;
@@ -502,16 +530,16 @@ h1 {
   margin: 5vh 0 0 -15vw;
 }
 #section7_headingsmall {
-  color: #F5F5F5;
   margin: -135vh 0 0 0;
   position: absolute;
+  color: #F5F5F5;
   font-size: 1.8vw;
   font-weight: 200;
 }
 #section7_heading2 {
   width: 55vw;
-  color: #F5F5F5;
   margin: -140vh 0 0 36vw;
+  color: #F5F5F5;
 }
 #section7_p2 {
   width: 53vw;
